# job_task

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
config/: constants.py  managers.py  settings.py  urls.py
payments/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
payments/migrations/: 0001_initial.py  0002_alter_payment_amount.py
users/: admin.py  filters.py  models.py  serializers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_rename_date_joined_user_created_at_user_updated_at_and_more.py  0003_alter_user_role.py  0004_role_remove_user_role_user_roles.py
