[project]
name = "config"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-environ>=0.13.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "psycopg[binary]>=3.3.4",
    "gunicorn>=23.0.0",
]
